@@ -15,7 +15,12 @@ ltmain.sh \
 Makefile.in \
 missing \
 mkinstalldirs \
-$(PACKAGE_TARNAME)-$(PACKAGE_VERSION)*
+$(PACKAGE_TARNAME)-$(PACKAGE_VERSION)* \
+m4/libtool.m4 \
+m4/lt~obsolete.m4 \
+m4/ltoptions.m4 \
+m4/ltsugar.m4 \
+m4/ltversion.m4
 
 SUBDIRS = src doc
 
